# popcat_help_you_search

./: .gitignore  CMakeLists.txt  README.md  pop_cat.mov  popcat
mac/: icon.sh
mac/popcat.app/Contents/: Info.plist
mac/popcat.app/Contents/Resources/: popcat.icns
src/: data.h  lala.cpp  main.cpp  search.cpp  searchNaiveLinear.cpp  searchServer.cpp  searchServer.h
ubuntu/: README.md  app.sh  install.sh  uninstall.sh
